--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <a class="volverInicio" href="#"><i class="fas fa-angle-up"></i></a>
+    <a class="volverInicio" href=""><i class="fas fa-angle-up"></i></a>
     <div class="fixed-bottom">
         <p>Copyright &copy; 2020 - <a href="">Aviso Legal</a> - <a href="#">Cookies</a></p>
     </div>
