--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,12 +1,29 @@
-<div>
+<!-- <div class="cont">
+
+
     <nav>
-        <div>
-            <img src="../../assets/images/Logotipo.jpg">
-        </div>
         <ul>
             <li>Registro</li>
 
             <li>Perfil</li>
         </ul>
     </nav>
+    <img src="../../assets/images/Logotipo.jpg">
 </div>
+ -->
+
+
+<nav class="cont">
+
+    <div class="img">
+        <img src="../../assets/images/Logotipo.jpg" alt="">
+
+    </div>
+
+    <div class="nav">
+        <ul>
+            <li>Registro</li>
+            <li>Ver Perfil</li>
+        </ul>
+    </div>
+</nav>
