--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -11,31 +11,53 @@
 body {
     font-family: 'Spectral', serif;
 }
+
 ul {
-    padding: 0px;
-    margin: 0px;
-    cursor: pointer;
+    margin: 0;
+    padding: 0;
 }
+
+
 nav {
+    display: flex;
+    flex-direction: row;
+}
+
+nav div {
+    width: 100%;
     background-color: #21242e;
     display: flex;
+    border: 1px dotted #fa573f;
+}
+
+nav .nav{
     justify-content: right;
-    padding: 10px;
 }
-
-nav ul li {
+.nav ul li {
     display: inline-block;
-    color: #fa573a;
-    margin-left: 20px;
-    padding: 20px;
-    border: 1px solid #fa573a;
-}
+    padding: 10px;
+    border: 1px dotted #fa573f;
+    height: 50px;
+    color: #fa573f;
 
-nav ul li:hover {
-    background-color: #fa573a;
+}
+.nav ul li:hover {
+    transition: 1s;
+    background-color: #fa573f;
     color: #21242e;
+    cursor: pointer;
 }
 
-/* nav div {
-
-} */
+nav .img {
+    justify-content: right;
+}
+.img img {
+    height: 50px;
+    border: 3px dotted #fa573f;
+    cursor: pointer;
+}
+.img img:hover {
+    transition: 1.5s;
+    transform: skew(-10deg);
+    
+}
