--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,20 @@
 <p>home works!</p>
+<div>
+
+</div>
+<div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="https://esports.eldesmarque.com/wp-content/uploads/2019/09/LoL2.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">League of Legends</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="https://www.tuexpertomovil.com/wp-content/uploads/2019/04/moviles-android-compatibles-con-fortnite-2.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
