Creado html de componente fortnite

--- a/src/app/fortnite/fortnite.component.html
+++ b/src/app/fortnite/fortnite.component.html
@@ -1,1 +1,35 @@
-<p>fortnite works!</p>
+<div class="container">
+    <div class="row">
+
+        <img src="https://cdn2.unrealengine.com/14br-bplaunch-egs-s1-2560x1440-2560x1440-851249168.jpg">
+
+    </div>
+
+    <div class="row buttons">
+        <div class="col-3">
+
+            <button class="btn">
+                Crear Partida
+            </button>
+
+        </div>
+        <div class="col-6">
+
+            <button class="btn">
+                Partidas recientes
+            </button>
+
+        </div>
+        <div class="col-3">
+
+            <button class="btn">
+                Unirse a partida
+            </button>
+
+        </div>
+    </div>
+
+    <div class="row games">
+
+    </div>
+</div>
