--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,35 @@
-<p>home works!</p>
-<div>
-
+<div class="hero">
+    <div>
+        <h1>DuoTracker</h1>
+        <h2>¿Quieres difrutar de los videojuego con un compañero?</h2>
+        <img src="../../assets/images/Logotipo.jpg">
+    </div>
 </div>
-<div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="https://esports.eldesmarque.com/wp-content/uploads/2019/09/LoL2.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">League of Legends</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
+<div class="container">
+  <div class="row juegos">
+    <div class="card col-3 " style="width: 18rem;">
+        <img class="card-img-top" src="https://esports.eldesmarque.com/wp-content/uploads/2019/09/LoL2.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">League of Legends</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-block btn-primary">Ir a League of Leagends</a>
+        </div>
+      </div>
+      <div class="card col-3 fortnite" style="width: 18rem;">
+        <img src="https://www.tuexpertomovil.com/wp-content/uploads/2019/04/moviles-android-compatibles-con-fortnite-2.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Fortnite</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-block btn-primary">Ir a Fortnite</a>
+        </div>
+      </div>
+      <div class="card col-3" style="width: 18rem;">
+        <img src="https://i.blogs.es/82f542/cod-black-ops-cold-war-alfa/450_1000.jpeg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Call of Duty</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-block btn-primary">Ir a Call of Duty</a>
+        </div>
+      </div>
   </div>
-  <div class="card" style="width: 18rem;">
-    <img src="https://www.tuexpertomovil.com/wp-content/uploads/2019/04/moviles-android-compatibles-con-fortnite-2.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
   </div>
