--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -21,5 +21,8 @@
 .hero > div {
     color: white;
     padding: 10% 3%;
-    
+}
+.hero h1{
+    font-size: 2.5em;
+    color: var(--color-principal);
 }
