maquetacion simple de los 3 componentes de juegos

--- a/src/app/call-of-duty/call-of-duty.component.html
+++ b/src/app/call-of-duty/call-of-duty.component.html
@@ -1,1 +1,36 @@
-<p>call-of-duty works!</p>
+<div class="container">
+    <div class="row">
+
+        <img
+            src="https://sm.ign.com/ign_es/news/c/call-of-du/call-of-duty-black-ops-cold-war-multiplayer-footage-leaks_mumd.jpg">
+
+    </div>
+
+    <div class="row buttons">
+        <div class="col-3">
+
+            <button class="btn">
+                Crear Partida
+            </button>
+
+        </div>
+        <div class="col-6">
+
+            <button class="btn">
+                Partidas recientes
+            </button>
+
+        </div>
+        <div class="col-3">
+
+            <button class="btn">
+                Unirse a partida
+            </button>
+
+        </div>
+    </div>
+
+    <div class="row games">
+
+    </div>
+</div>
