--- a/src/app/juego/juego.component.html
+++ b/src/app/juego/juego.component.html
@@ -2,7 +2,7 @@
     <div class="row">
 
         <img
-            src="https://sm.ign.com/ign_es/news/c/call-of-du/call-of-duty-black-ops-cold-war-multiplayer-footage-leaks_mumd.jpg">
+            src="https://esports.as.com/2019/09/07/league-of-legends/pantalla-inicio-cliente-League-Legends_1279981992_253561_1440x600.jpg">
 
     </div>
 
@@ -31,6 +31,9 @@
     </div>
 
     <div class="row games">
+        <div class="col4">game 1</div>
+        <div class="col4">game 2</div>
+        <div class="col4">game 3</div>
 
     </div>
 </div>
