--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -16,7 +16,7 @@
 <nav class="cont">
 
     <div class="img">
-        <img src="../../assets/images/Logotipo.jpg" alt="">
+        <img src="../../assets/images/Logotipo.jpg">
 
     </div>
 
