--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
           <li class="list-group-item">Crea sinergías</li>
           <li class="list-group-item">Comparte tus partidas y resultados</li>
           <li class="list-group-item"><a href="https://euw.op.gg/" target="_blank">Analiza las estadísticas</a> </li></ul>
-          <a href="" class="btn btn-block btn-primary">Ir a League of Legends</a>
+          <button [routerLink]="['juego']" routerLinkActive="activa" class="btn btn-block btn-primary">Ir a League of Legends</button>
         </div>
       </div>
       <div class="card col-3 fortnite" style="width: 18rem;">
