--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -22,7 +22,7 @@
 
     <div class="nav">
         <ul>
-            <li>Registro</li>
+            <li [routerLink]="['registro']" routerLinkActive="activa">Registro</li>
             <li>Ver Perfil</li>
         </ul>
     </div>
