--- a/src/app/juego/juego.component.html
+++ b/src/app/juego/juego.component.html
@@ -9,7 +9,7 @@
     <div class="row buttons">
         <div class="col-3">
 
-            <button class="btn">
+            <button class="btn" [routerLink]="['crear']" routerLinkActive="activa">
                 Crear Partida
             </button>
 
