--- a/src/app/formulario-partida/formulario-partida.component.html
+++ b/src/app/formulario-partida/formulario-partida.component.html
@@ -1,9 +1,10 @@
 <p>formulario-partida works!</p>
 <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
+    <div class="container">
     <div class="form-group">
         <label>Nombre de Usuario</label>
         <input type="text" class="form-control" formControlName="usuario">
-        <p class="text-danger" *ngIf="formulario.get('usuario').hasError('required') && formulario.get('nombre').touched"> El campo nombre de usuario es requerido.</p>
+        <p class="text-danger" *ngIf="formulario.get('usuario').hasError('required') && formulario.get('usuario').touched"> El campo nombre de usuario es requerido.</p>
     </div>
     <div class="form-group">
         <label>Fecha de la partida</label>
@@ -28,4 +29,5 @@
         </select>
     </div>
     <input type="submit" value="Enviar" [disabled]="!formulario.valid" class="btn btn-block btn-success">
+    </div>
 </form>
