Funciona formulario general, falta retoques

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -23,7 +23,7 @@
     <div class="nav">
         <ul>
             <li>Registro</li>
-            <li>Ver Perfil</li>
+            <li>Login</li>
         </ul>
     </div>
 </nav>
