--- a/src/app/formulario-general/formulario-general.component.html
+++ b/src/app/formulario-general/formulario-general.component.html
@@ -1,21 +1,25 @@
 <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
-   <div class="container">
+    <div class="container">
         <div class="form-group">
             <label>Email</label>
             <input type="email" class="form-control" formControlName="email">
-            <p class="text-danger" 
-            *ngIf="formulario.get('email').hasError('required') && formulario.get('email').touched">Es obligatorio completar este campo. </p>
+            <p class="text-danger"
+                *ngIf="formulario.get('email').hasError('required') && formulario.get('email').touched">Es obligatorio
+                completar este campo. </p>
         </div>
         <div class="form-group">
             <label>Username</label>
             <input type="text" class="form-control" formControlName="username">
-            <p class="text-danger" 
-            *ngIf="formulario.get('username').hasError('required') && formulario.get('username').touched">Es obligatorio completar este campo. </p>
+            <p class="text-danger"
+                *ngIf="formulario.get('username').hasError('required') && formulario.get('username').touched">Es
+                obligatorio completar este campo. </p>
         </div>
         <div class="form-group">
             <label>Password</label>
             <input type="password" class="form-control" formControlName="password">
-            <p class="text-danger" *ngIf="formulario.get('password').hasError('required') && formulario.get('password').touched">Es obligatorio completar este campo.</p>
+            <p class="text-danger"
+                *ngIf="formulario.get('password').hasError('required') && formulario.get('password').touched">Es
+                obligatorio completar este campo.</p>
         </div>
         <div class="form-group">
             <label>Repite Password</label>
@@ -27,5 +31,8 @@
             </p>
         </div>
         <input type="submit" value="Enviar" [disabled]="formulario.invalid" class="btn btn-block btn-success">
+        <!-- <button [swal]="['Oops!', 'This is not implemented yet :/', 'warning']">
+  Do it!
+</button> -->
     </div>
-    </form>
+</form>
