--- a/src/app/formulario-partida/formulario-partida.component.html
+++ b/src/app/formulario-partida/formulario-partida.component.html
@@ -18,6 +18,12 @@
     </div>
 
     <div class="form-group">
+        <select name="juego">
+            <option value=""></option>
+        </select>
+    </div>
+    
+    <div class="form-group">
         <select name="modoDeJuego">
             <option value=""></option>
         </select>
