--- a/src/app/juego/juego.component.html
+++ b/src/app/juego/juego.component.html
@@ -12,7 +12,7 @@
             <button class="btn" [routerLink]="['crear']" routerLinkActive="activa">
                 Crear Partida
             </button>
-
+           <!--  <button class="btn" [routerLink]="['/home', idJuego, 'crear']" routerLinkActive="activa"> -->
         </div>
         <div class="col-6">
 
