--- a/src/app/formulario-partida/formulario-partida.component.html
+++ b/src/app/formulario-partida/formulario-partida.component.html
@@ -17,23 +17,26 @@
         <input type="text" class="form-control" formControlName="descripcion">
     </div>
 
-    <div class="form-group">
-        <select name="juego" *ngFor="let juego of arrJuegos">
-             <option [value]="arrJuegos.id"></option>
+ <!--    <div class="form-group">
+        <select name="juego" formControlName="juego" >
+            <option value="SeleccionaJuego">Selecciona un juego</option>
+             <option *ngFor="let juego of arrJuegos" [value]="juego.id">{{juego.nombre}}</option>
         </select>
-    </div>
+    </div> -->
 
-    <div class="form-group">
-        <select name="modoDeJuego">
-            <option value=""></option>
+   <div class="form-group">
+        <select name="modoDeJuego" formControlName="modos" >
+            <option value="SeleccionaModo" >Selecciona un modo de juego</option>
+            <option *ngFor="let modo of arrModos" [value]="modo.id"> {{modo.nombre}}</option>
         </select>
     </div>
-
+ 
     <div class="form-group">
-        <select name="rango">
-            <option value=""></option>
+        <select name="rango" formControlName="rangos">
+            <option value="SeleccionaRango" [selected]="true" > Selecciona tu Rango en el juego </option>
+            <option *ngFor="let rango of arrRangos" [value]="rango.id"> {{rango.rango}}</option>
         </select>
-    </div>
+    </div> 
     <input type="submit" value="Enviar" [disabled]="!formulario.valid" class="btn btn-block btn-success">
     </div>
 </form>
