creado componente perfil y enrutamiento, formularios funcionando

--- a/src/app/formulario-general/formulario-general.component.html
+++ b/src/app/formulario-general/formulario-general.component.html
@@ -30,7 +30,7 @@
                 Las contraseñas no coinciden.
             </p>
         </div>
-        <select class="juegoPreferido"></select><br>
+        <!-- <select class="juegoPreferido"></select><br> -->
         <select>
             <option value="ps4">Ps4</option>
             <option value="xbox">Xbox One</option>
