--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -22,22 +22,32 @@
                 <div class="form-group">
                     <label for="username">Nombre de usuario</label>
                     <input type="text" value={{usuarioDatos?.username}} formControlName="username">
+                    <!--  <p class="text-danger"
+                        *ngIf="formulario.get('usuario').hasError('required') && formulario.get('usuario').touched"> El
+                        campo nombre de usuario es requerido.</p> -->
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input type="text" value={{usuarioDatos?.email}} formControlName="email">
+                    <!--  <p class="text-danger"
+                        *ngIf="formulario.get('email').hasError('required') && formulario.get('email').touched">Es
+                        obligatorio completar este campo.</p>
+                    <p class="text-danger"
+                        *ngIf="formulario.get('email').hasError('pattern') && formulario.get('email').touched">El email
+                        no es válido</p> -->
                 </div>
                 <div class="form-group">
                     <label for="">plataforma preferida</label>
                     <select formControlName="plataforma_preferida">
-                        <option checked value="">Selecciona una plataforma</option>
-                        <option value="{{plataforma}}" *ngFor="let plataforma of arrPlataformas">{{plataforma}}</option>
+                        <option disabled value="">Selecciona una plataforma</option>
+                        <option value={{plataforma}} *ngFor="let plataforma of arrPlataformas">{{plataforma}}
+                        </option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="">juego preferido</label>
                     <select formControlName="juego_preferido">
-                        <option checked value="">Selecciona un juego</option>
+                        <option disabled value="">Selecciona un juego</option>
                         <option value={{juego.nombre}} *ngFor="let juego of arrJuegos">{{juego.nombre}}</option>
                     </select>
                 </div>
