--- a/src/app/juego/juego.component.css
+++ b/src/app/juego/juego.component.css
@@ -5,12 +5,15 @@
 body {
     background-image: url("https://cdn.hipwallpaper.com/i/8/66/i4Ek1A.jpg");
 }
-div img {
+div img .foto{
     width: 70%;
     margin-top: 2em;
     border: 2px solid #21242e;
     border-radius: 50%;
     box-shadow: 5px 10px #21242e;
+}
+div img{
+    width: 15%;
 }
 
 div img:hover{
@@ -36,12 +39,6 @@ div button {
     
     
 }
-
-button {
-    border: 2px solid black;
-    background-color: #fa573a;
-}
-
 button:hover {
     transition: 1s;
     border: 2px solid #fa573a;
