--- a/src/app/partida/partida.component.html
+++ b/src/app/partida/partida.component.html
@@ -1,1 +1,25 @@
-<p>partida works!</p>
+<div class="container">
+    <div class="partida">
+        <p>descripción: {{partidaSeleccionada?.descripcion}}</p>
+        <p>idjuego: {{partidaSeleccionada?.id_juego}}</p>
+        <p>Fecha: {{partidaSeleccionada?.fecha}}</p>
+        <p>Juego: {{partidaSeleccionada?.nombre_juego}}</p>
+        <p>Rango: {{partidaSeleccionada?.rango}}</p>
+        <p>Creador: {{datosUsuario?.username}}</p>
+        <p>{{partidaSeleccionada?.imagen_juego}}</p>
+        <p>{{partidaSeleccionada?.logo_juego}}</p>
+        <p>Jugadores: {{partidaSeleccionada?.cantidad_jugadores}} / {{partidaSeleccionada?.numero_jugadores}}</p>
+
+
+
+        <button (click)="onClick()">UNIRSE</button>
+
+
+
+
+
+
+
+
+
+    </div>
