--- a/src/app/juego/juego.component.html
+++ b/src/app/juego/juego.component.html
@@ -81,7 +81,8 @@
                     </div>
                 </div>
                 <div class="col">
-                    <button [routerLink]="" class="btn btn-info">Ver detalle</button>
+                    <button [routerLink]="['/juego', partida.id_juego,'partidas',partida.registro_partida]"  class="btn btn-info">Ver detalle</button>
+                    
                 </div>
             </div>
         </div>
