--- a/src/app/formulario-login/formulario-login.component.html
+++ b/src/app/formulario-login/formulario-login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formulario" (ngSubmit)="onSubmit()" *ngIf="isLogged(true)">
+<form [formGroup]="formulario" (ngSubmit)="onSubmit()">
     <div class="container">
         <div class="form-group">
             <label>Nombre de Usuario o correo electrónico</label>
@@ -13,13 +13,3 @@
         <input type="submit" value="Enviar" class="btn btn-block btn-success">
     </div>
 </form>
-
-
-
-NOMBRE DE USUARIO
-
-CORREO ELECTRONICO
-
-BLABLA
-
-BLABLA
