--- a/src/app/partida/partida.component.html
+++ b/src/app/partida/partida.component.html
@@ -5,7 +5,7 @@
         <p>Fecha: {{partidaSeleccionada?.fecha}}</p>
         <p>Juego: {{partidaSeleccionada?.nombre_juego}}</p>
         <p>Rango: {{partidaSeleccionada?.rango}}</p>
-        <p>Creador: {{datosUsuario?.username}}</p>
+        <p>Creador: {{partidaSeleccionada?.username}}</p>
         <p>{{partidaSeleccionada?.imagen_juego}}</p>
         <p>{{partidaSeleccionada?.logo_juego}}</p>
         <p>Jugadores: {{partidaSeleccionada?.cantidad_jugadores}} / {{partidaSeleccionada?.numero_jugadores}}</p>
