--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -22,9 +22,11 @@
 
     <div class="nav">
         <ul>
-            <li [routerLink]="['login']" routerLinkActive="activa">Login</li>
-            <li [routerLink]="['registro']" routerLinkActive="activa">Registro</li>
-            <li [routerLink]="['perfil']" routerLinkActive="activa" *ngIf='token'>Ver Perfil</li>
+            <li *ngIf="token" class="nombre">Sesion iniciada como: <span>{{datosUsuario?.username}}</span> </li>
+            <li *ngIf="!token"> <i>No has iniciado sesion</i></li>
+            <li class="li-nav" [routerLink]="['login']" routerLinkActive="activa" *ngIf='!token'>Login</li>
+            <li class="li-nav" [routerLink]="['registro']" routerLinkActive="activa">Registro</li>
+            <li class="li-nav" [routerLink]="['perfil']" routerLinkActive="activa" *ngIf='token'>Ver Perfil</li>
         </ul>
     </div>
 </nav>
