--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -14,62 +14,62 @@
             <p>fecha de registro: {{usuarioDatos?.fecha_registro | date:'dd/MM/yy'}}</p>
         </div>
 
+        <button (click)="onClick()" class="btn btn-info"> cerrar sesión</button>
+    </div>
 
-        <!-- MODIFICAR PERFIL -->
-        <div class="form-group" *ngIf="mostrarForm">
-            <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
-                <input hidden type="number" formControlName="id">
-                <div class="form-group">
-                    <label for="username">Nombre de usuario</label>
-                    <input type="text" value={{usuarioDatos?.username}} formControlName="username">
-                    <!--  <p class="text-danger"
+
+    <!-- MODIFICAR PERFIL -->
+    <div class="form-group" *ngIf="mostrarForm">
+        <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
+            <input hidden type="number" formControlName="id">
+            <div class="form-group">
+                <label for="username">Nombre de usuario</label>
+                <input type="text" value={{usuarioDatos?.username}} formControlName="username">
+                <!--  <p class="text-danger"
                         *ngIf="formulario.get('usuario').hasError('required') && formulario.get('usuario').touched"> El
                         campo nombre de usuario es requerido.</p> -->
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="text" value={{usuarioDatos?.email}} formControlName="email">
-                    <!--  <p class="text-danger"
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="text" value={{usuarioDatos?.email}} formControlName="email">
+                <!--  <p class="text-danger"
                         *ngIf="formulario.get('email').hasError('required') && formulario.get('email').touched">Es
                         obligatorio completar este campo.</p>
                     <p class="text-danger"
                         *ngIf="formulario.get('email').hasError('pattern') && formulario.get('email').touched">El email
                         no es válido</p> -->
-                </div>
-                <div class="form-group">
-                    <label for="">plataforma preferida</label>
-                    <select formControlName="plataforma_preferida">
-                        <option disabled value="">Selecciona una plataforma</option>
-                        <option value={{plataforma}} *ngFor="let plataforma of arrPlataformas">{{plataforma}}
-                        </option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="">juego preferido</label>
-                    <select formControlName="juego_preferido">
-                        <option disabled value="">Selecciona un juego</option>
-                        <option value={{juego.nombre}} *ngFor="let juego of arrJuegos">{{juego.nombre}}</option>
-                    </select>
-                </div>
+            </div>
+            <div class="form-group">
+                <label for="">plataforma preferida</label>
+                <select formControlName="plataforma_preferida">
+                    <option disabled value="">Selecciona una plataforma</option>
+                    <option value={{plataforma}} *ngFor="let plataforma of arrPlataformas">{{plataforma}}
+                    </option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="">juego preferido</label>
+                <select formControlName="juego_preferido">
+                    <option disabled value="">Selecciona un juego</option>
+                    <option value={{juego.nombre}} *ngFor="let juego of arrJuegos">{{juego.nombre}}</option>
+                </select>
+            </div>
 
 
-                <input type="submit" value="Guardar cambios" class="btn btn-info" *ngIf="mostrarGuardar">
-            </form>
-        </div>
+            <input type="submit" value="Guardar cambios" class="btn btn-info" *ngIf="mostrarGuardar">
+        </form>
     </div>
-    <div class="row">
-        <div class="col">
-            1 of 3
-        </div>
-        <div class="col">
-            2 of 3
-        </div>
-        <div class="col">
-            <button (click)="botonModificar()" class="btn btn-info" *ngIf="mostrarModificar">Modificar</button>
-
-            <button (click)="botonCancelar()" *ngIf="mostrarCancelar" class="btn btn-danger"> Cancelar</button>
-        </div>
+</div>
+<div class="row">
+    <div class="col">
+        1 of 3
     </div>
+    <div class="col">
+        2 of 3
+    </div>
+    <div class="col">
+        <button (click)="botonModificar()" class="btn btn-info" *ngIf="mostrarModificar">Modificar</button>
 
-
+        <button (click)="botonCancelar()" *ngIf="mostrarCancelar" class="btn btn-danger"> Cancelar</button>
+    </div>
 </div>
