--- a/src/app/juego/juego.component.html
+++ b/src/app/juego/juego.component.html
@@ -1,87 +1,87 @@
+<div class="row">
+    <div>
+        <div class="hero">
+            <img [src]="arrJuegos[idJuego]?.logo">
+            <h3>{{arrJuegos[idJuego]?.nombre}}</h3>
+        </div>
+    </div>
 
-    <div class="row">
-        <div >
-            <div class="hero">
-                <img [src]="arrJuegos[idJuego].logo" >
-                <h3>{{arrJuegos[idJuego].nombre}}</h3>
+    <div class="container">
+        <div class="row buttons">
+            <div class="col-3">
+
+                <button class="btn btn-info" [routerLink]="['crear']" routerLinkActive="activa">
+                    Crear Partida
+                </button>
+                <!--  <button class="btn" [routerLink]="['/home', idJuego, 'crear']" routerLinkActive="activa"> -->
             </div>
-       </div>
+            <div class="col-12 recientes">
+                <p>Partidas recientes:</p>
 
-<div class="container">
-    <div class="row buttons">
-        <div class="col-3">
+            </div>
 
-            <button class="btn btn-info" [routerLink]="['crear']" routerLinkActive="activa">
-                Crear Partida
-            </button>
-           <!--  <button class="btn" [routerLink]="['/home', idJuego, 'crear']" routerLinkActive="activa"> -->
-        </div>
-        <div class="col-12 recientes">
-            <p>Partidas recientes:</p>
-            
         </div>
 
-    </div>
+        <div class="todasPartidas">
+            <div class="wrapper col-12">
 
-    <div class="todasPartidas">
-        <div class="wrapper col-12">
-            
-            <h4 class="headerJuego">Juego</h4>
-                   
-            <h4 class="headerFecha">Fecha</h4>
-                   
-            <h4 class="headerModo">Modo de juego</h4>
-                   
-            <h4 class="headerUser">Usuario creador</h4>
-                   
-            <h4 class="headerRango">Rango</h4>
-              
-        </div> 
-            
-    </div>
-    <div class="col-xs-12" *ngFor="let partida of arrPartidas">
-        <div class="list-group-item">
-            <div class="row">
-                <div class="col">
-                    <div class="item-col">
-                        <div class="content-col">
-                            <img [src]="partida.imagen_juego" alt="">
-                            <p><span>{{partida.nombre_juego}}</span></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="item-col">
-                        <div class="content-col fecha">{{partida.fecha}}</div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="item-col">
+                <h4 class="headerJuego">Juego</h4>
+
+                <h4 class="headerFecha">Fecha</h4>
+
+                <h4 class="headerModo">Modo de juego</h4>
+
+                <h4 class="headerUser">Usuario creador</h4>
+
+                <h4 class="headerRango">Rango</h4>
+
+            </div>
+
+        </div>
+        <div class="col-xs-12" *ngFor="let partida of arrPartidas">
+            <div class="list-group-item">
+                <div class="row">
+                    <div class="col">
                         <div class="item-col">
-                            {{partida.nombre_modo}}
+                            <div class="content-col">
+                                <img [src]="partida.imagen_juego" alt="">
+                                <p><span>{{partida.nombre_juego}}</span></p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <!-- <i class="bi bi-file-person-fill" style="font-size: 2rem; color: cornflowerblue;"></i> -->
-                    <div>{{partida.username}}</div>
-                </div>
-                <div class="col">
-                    <div class="item-col">
-                        <div class="content-col">
-                            {{partida.rango}}
-                            <img [src]="partida.imagen_rango" alt="">
-                            
+                    <div class="col">
+                        <div class="item-col">
+                            <div class="content-col fecha">{{partida.fecha}}</div>
                         </div>
-                    </div> 
-                </div>
-                
-                <div class="col">
-                    <p>{{partida.cantidad_jugadores}}/{{partida.jugadores_max}}</p>
-                    <button [routerLink]="['/juego', partida.id_juego,'partidas',partida.registro_partida]"  class="btn btn-info">Ver detalle</button>
-                    
+                    </div>
+                    <div class="col">
+                        <div class="item-col">
+                            <div class="item-col">
+                                {{partida.nombre_modo}}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <!-- <i class="bi bi-file-person-fill" style="font-size: 2rem; color: cornflowerblue;"></i> -->
+                        <div>{{partida.username}}</div>
+                    </div>
+                    <div class="col">
+                        <div class="item-col">
+                            <div class="content-col">
+                                {{partida.rango}}
+                                <img [src]="partida.imagen_rango" alt="">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <p>{{partida.cantidad_jugadores}}/{{partida.jugadores_max}}</p>
+                        <button [routerLink]="['/juego', partida.id_juego,'partidas',partida.registro_partida]"
+                            class="btn btn-info">Ver detalle</button>
+
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
